# capnp-issue

./: .gitignore  .gitmodules  Makefile  README.md  go.mod  main.go
bytestream/: byte-stream.capnp  byte-stream.capnp.go
rs-client/: Cargo.toml  build.rs
rs-client/src/: byte-stream.capnp  byte_stream_capnp.rs  main.rs
