[package]

name = "cc-rs"
version = "0.0.0"
edition = "2018"
build = "build.rs"

[[bin]]
name = "cc-test"
path = "src/main.rs"

[dependencies]
capnp = { version = "0.20.3" }
capnp-rpc = { version = "0.20.3" }
futures = "0.3.0"
tokio = { version = "1.0.0", features = ["net", "rt", "rt-multi-thread", "macros", "time"]}
tokio-util = { version = "0.7.4", features = ["compat"] }

[build-dependencies]
capnpc = "0.20.1"
capnp = "0.20.3"

